; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/hostapd/extr_hostapd_cli.c_hostapd_complete_stations.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/hostapd/extr_hostapd_cli.c_hostapd_complete_stations.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stations = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8** (i8*, i32)* @hostapd_complete_stations to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8** @hostapd_complete_stations(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @get_cmd_arg_num(i8* %7, i32 %8)
  store i32 %9, i32* %5, align 4
  store i8** null, i8*** %6, align 8
  %10 = load i32, i32* %5, align 4
  switch i32 %10, label %13 [
    i32 1, label %11
  ]

11:                                               ; preds = %2
  %12 = call i8** @cli_txt_list_array(i32* @stations)
  store i8** %12, i8*** %6, align 8
  br label %13

13:                                               ; preds = %2, %11
  %14 = load i8**, i8*** %6, align 8
  ret i8** %14
}

declare dso_local i32 @get_cmd_arg_num(i8*, i32) #1

declare dso_local i8** @cli_txt_list_array(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
